--- a/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
@@ -4,14 +4,14 @@
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <!-- <img src="assets/img/logo.webp" alt=""> -->
-            <h1 class="sitename">Tour</h1>
+            <h1 class="sitename">Emp Viajes</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
+                <li><a asp-controller="Flights" asp-action="Available">Destinations</a></li>
                 <li><a href="tours.html">Tours</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
