--- a/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
@@ -9,10 +9,10 @@
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a asp-controller="Flights" asp-action="Available">Destinations</a></li>
-                <li><a href="tours.html">Tours</a></li>
+                <li><a asp-controller="Flights" asp-action="Available">Vuelos</a></li>
+                <li><a asp-controller="Airports" asp-action="Index">Aeropuertos</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li class="dropdown">
