--- a/Proyecto_Aerolinea.Web/Views/Airports/Index.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Airports/Index.cshtml
@@ -32,7 +32,7 @@
         @foreach (var airport in Model)
         {
             <tr>
-                <td>@airport.AirportId</td>
+                <td>@airport.Id</td>
                 <td>@airport.AirportName</td>
                 <td>@airport.AirportCity</td>
                 <td>@airport.AirportCountry</td>
