CRUD para flight

--- a/Proyecto_Aerolinea.Web/Views/Flights/Available.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Flights/Available.cshtml
@@ -35,7 +35,7 @@
         @foreach (var flight in Model)
         {
             <tr>
-                <td>@flight.FlightId</td>
+                <td>@flight.Id</td>
                 <td>@flight.FlightCode</td>
                 <td>@flight.DepartureDateTime</td>
                 <td>@flight.ArrivalDateTime</td>
