Uso de NotyServices y Boton Tour actua como Home que fue eliminado

--- a/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿<header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-        <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <a asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center me-auto me-xl-0">
             <!-- Uncomment the line below if you also wish to use an image logo -->
             <!-- <img src="assets/img/logo.webp" alt=""> -->
             <h1 class="sitename">Tour</h1>
@@ -9,7 +9,7 @@
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                @* <li><a asp-controller="Home" asp-action="Index">Home</a></li> *@
                 <li><a href="about.html">About</a></li>
                 <li><a asp-controller="Flights" asp-action="Available">Vuelos</a></li>
                 <li><a asp-controller="Airports" asp-action="Index">Aeropuertos</a></li>
