--- a/Proyecto_Aerolinea.Web/Views/_ViewImports.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Proyecto_Aerolinea.Web
 @using Proyecto_Aerolinea.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Proyecto_Aerolinea.Web.DTOs
