--- a/Proyecto_Aerolinea.Web/Areas/Admin/Views/Shared/_Dashboard.cshtml
+++ b/Proyecto_Aerolinea.Web/Areas/Admin/Views/Shared/_Dashboard.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -17,5 +12,6 @@
 		@RenderBody()
     </main>
 	@await Html.PartialAsync("_Scripts")
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
