--- a/Proyecto_Aerolinea.Web/Views/Shared/_Scripts.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_Scripts.cshtml
@@ -10,3 +10,7 @@
 
 <!-- Main JS File -->
 <script src="~/assets/js/main.js"></script>
+
+<script src="~/lib/sweetalert2/sweetalert2@11.js"></script>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
