--- a/Proyecto_Aerolinea.Web/Views/Shared/_MyLayout.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_MyLayout.cshtml
@@ -38,6 +38,7 @@
     <div id="preloader"></div>
 
     @await Html.PartialAsync("_Scripts")
+    @await RenderSectionAsync("Scripts", required: false)
 
 </body>
 
