--- a/Proyecto_Aerolinea.Web/Views/Flights/Create.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Flights/Create.cshtml
@@ -3,11 +3,10 @@
 <div class="page-title dark-background aos-init aos-animate" data-aos="fade" style="background-image: url(assets/img/travel/showcase-8.webp);">
     <div class="container position-relative">
         <h1>Nuevo Vuelo</h1>
-        <p>Crea un nuevo vuelo</p>
         <nav class="breadcrumbs">
             <ol>
                 <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                <li><a asp-action="Availabel">Tours</a></li>
+                <li><a asp-action="Available">Tours</a></li>
                 <li class="current">Create</li>
             </ol>
         </nav>
@@ -23,50 +22,45 @@
     <div class="card-body">
         <h4 class="card-title text-primary">Crear Vuelo</h4>
 
-        <form asp-action="Create" method="post">
-            <div class="row g-3">
-                <div class="col-md-12">
-                    <div class="form-floating">
-                        <input asp-for="FlightCode" class="form-control" placeholder="@Html.DisplayFor(dto => dto.FlightCode)">
-                        <label asp-for="FlightCode">Codigo de Vuelo</label>
-                        <span asp-validation-for="FlightCode" class="text-danger"></span>
-                    </div>
+        <form asp-action="Create" method="post" class="row g-3">
+            <div class="col-md-12">
+                <div class="form-floating">
+                    <input asp-for="FlightCode" class="form-control" placeholder="@Html.DisplayFor(dto => dto.FlightCode)">
+                    <label asp-for="FlightCode">Codigo de Vuelo</label>
+                    <span asp-validation-for="FlightCode" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-floating">
+                    <input asp-for="DepartureDateTime" class="form-control" placeholder="@Html.DisplayFor(dto => dto.DepartureDateTime)">
+                    <label asp-for="DepartureDateTime">Fecha de Salida</label>
+                    <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-floating">
+                    <input asp-for="ArrivalDateTime" class="form-control" placeholder="@Html.DisplayFor(dto => dto.ArrivalDateTime)">
+                    <label asp-for="ArrivalDateTime">Fecha de Llegada</label>
+                    <span class="text-danger" asp-validation-for="ArrivalDateTime"></span>
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="form-floating">
+                    <input asp-for="Status" class="form-control" placeholder="@Html.DisplayFor(dto => dto.Status)">
+                    <label asp-for="Status"></label>
+                    <span asp-validation-for="Status" class="text-danger"></span>
                 </div>
             </div>
 
             <div class="row g-3">
                 <div class="col-md-6">
                     <div class="form-floating">
-                        <input asp-for="DepartureDateTime" class="form-control" placeholder="@Html.DisplayFor(dto => dto.DepartureDateTime)">
-                        <label asp-for="DepartureDateTime">Fecha de Salida</label>
-                        <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="ArrivalDateTime" class="form-control" placeholder="@Html.DisplayFor(dto => dto.ArrivalDateTime)">
-                        <label asp-for="ArrivalDateTime">Fecha de Llegada</label>
-                        <span class="text-danger" asp-validation-for="ArrivalDateTime"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row g-3">
-                <div class="col-md-12">
-                    <div class="form-floating">
-                        <input asp-for="Status" class="form-control" placeholder="@Html.DisplayFor(dto => dto.Status)">
-                        <label asp-for="Status"></label>
-                        <span asp-validation-for="Status" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row g-3">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="OriginAirportId" class="form-control" placeholder="@Html.DisplayFor(dto => dto.OriginAirportId)">
+                        <select asp-for="OriginAirportId" class="form-control" asp-items="ViewBag.Airport">
+                            <option value="">Seleccione un aeropuerto</option>
+                        </select>
                         <label asp-for="OriginAirportId"></label>
-                        <span class="text-danger" asp-validation-for="OriginAirportId"></span>
                     </div>
                 </div>
 
@@ -79,13 +73,11 @@
                 </div>
             </div>
 
-            <div class="row g-3">
-                <div class="col-md-12">
-                    <div class="form-floating">
-                        <input asp-for="AircraftId" class="form-control" placeholder="@Html.DisplayFor(dto => dto.AircraftId)">
-                        <label asp-for="AircraftId"></label>
-                        <span class="text-danger" asp-validation-for="AircraftId"></span>
-                    </div>
+            <div class="col-md-12">
+                <div class="form-floating">
+                    <input asp-for="AircraftId" class="form-control" placeholder="@Html.DisplayFor(dto => dto.AircraftId)">
+                    <label asp-for="AircraftId"></label>
+                    <span class="text-danger" asp-validation-for="AircraftId"></span>
                 </div>
             </div>
 
