--- a/Proyecto_Aerolinea.Web/Views/Flights/Create.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Flights/Create.cshtml
@@ -62,6 +62,7 @@
                                 <option value="">Seleccione un aeropuerto</option>
                             </select>
                             <label asp-for="OriginAirportId">Aeropuerto Origen</label>
+                            <span asp-validation-for="OriginAirportId" class="text-danger"></span>
                         </div>
                     </div>
 
@@ -71,6 +72,7 @@
                                 <option value="">Seleccionar Aeropuerto</option>
                             </select>
                             <label asp-for="DestinationAirportId">Aeropuerto Destino</label>
+                            <span asp-validation-for="DestinationAirportId" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -82,6 +84,7 @@
                         <option value="">Seleccionar avion de abordaje</option>
                     </select>
                     <label asp-for="AircraftId">Avion de Abordaje</label>
+                    <span asp-validation-for="AircraftId" class="text-danger"></span>
                 </div>
             </div>
 
