Controller Details y vistas index y details agregados

--- a/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
+++ b/Proyecto_Aerolinea.Web/Views/Shared/_Header.cshtml
@@ -9,8 +9,7 @@
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                @* <li><a asp-controller="Home" asp-action="Index">Home</a></li> *@
-                <li><a href="about.html">About</a></li>
+                <li><a asp-controller="Ticket" asp-action="Index">About</a></li>
                 <li><a asp-controller="Flights" asp-action="Available">Vuelos</a></li>
                 <li><a asp-controller="Airports" asp-action="Index">Aeropuertos</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
